--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
+*,
+*::before,
+*::after {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: yellowgreen;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+}
+.nav {
+  background-color: green;
+  width: 100vw;
+  color: white;
+  font-weight: bold;
+  font-size: 3rem;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 8px;
+}
+/* Add ToDo */
+
+.addtodo {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  padding-top: 5%;
+  width: 100%;
+  margin-bottom: 25px;
+}
+input {
+  width: 70%;
+}
+button {
+  width: 20%;
+  font-weight: bold;
   color: white;
+  background-color: green;
+}
+input,
+button {
+  border: 1px gray solid;
+  border-radius: 25px;
+  padding: 20px 12px;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  opacity: 0.9;
+}
+button:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* Display ToDo */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.displaycontainer {
+  background-color: white;
+  border: 2px solid rgb(53, 50, 50);
+  border-radius: 8px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  margin: 0px auto;
+  padding: 8px 0px;
+}
+.diplaytitle {
+  display: flex;
+  padding: 8px;
+  margin: 0px auto;
+  width: 90%;
+  background-color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-bottom: 2px dashed black;
+}
+.displaytodo {
+  display: flex;
+  padding: 15px;
+  margin: 0px auto;
+  width: 90%;
+  background-color: white;
+  font-size: 1.3rem;
+  font-family: monospace;
+}
+.hash {
+  width: 5%;
+}
+.task {
+  width: 60%;
+}
+.status {
+  width: 15%;
+}
+.action {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.close,
+.done {
+  cursor: pointer;
 }
