--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
 /* Add ToDo */
 
 .addtodo {
+  position: relative;
   display: flex;
   gap: 5px;
   justify-content: center;
@@ -103,4 +104,15 @@ button:hover {
 .close,
 .done {
   cursor: pointer;
+}
+.popup {
+  position: absolute;
+  top: 115px;
+  color: red;
+}
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px 0px;
 }
